Translate consul-config.adoc.po

--- a/l10n/po/ja_JP/_guides/consul-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/consul-config.adoc.po
@@ -3,31 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-09 20:30+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/consul-config.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Reading properties from Consul"
-msgstr "Quarkus - 領事からプロパティーを読み取る"
+msgstr "Quarkus - Consulからプロパティーの読込"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:12
-#, fuzzy
 msgid "This guide explains how your Quarkus application can read configuration properties at runtime from https://www.consul.io[Consul]."
 msgstr "このガイドでは、Quarkusアプリケーションが実行時に link:https://www.consul.io[Consul] から設定プロパティーを読み取る方法について説明します。"
 
@@ -70,31 +69,28 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:28
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step."
 msgstr "次項の説明に従って、一歩一歩アプリを作成していくことをお勧めします。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Introduction"
-msgstr "序章"
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:33
-#, fuzzy
 msgid "Consul is a versatile system which among other things, provides a distributed Key-Value store that is used in many architectures as a source of configuration for services.  This Key-Value store is what the `quarkus-consul-config` extension interacts with in order to allow Quarkus applications to read runtime configuration properties from Consul."
-msgstr "Consulは、サービスの設定のソースとして多くのアーキテクチャで使用されている分散型のキーバリューストアを提供する多目的システムです。このキーバリューストアは、Quarkus アプリケーションが Consul から実行時の設定プロパティーを読み込めるようにするために、 `quarkus-consul-config` エクステンションが相互に作用するものです。"
+msgstr "Consulは、サービスの設定のソースとして多くのアーキテクチャで使用されている分散型のキーバリューストアを提供する多目的システムです。このキーバリューストアは、Quarkus アプリケーションが Consul から実行時の設定プロパティーを読み込めるようにするために、 `quarkus-consul-config` エクステンションがやり取りするものです。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:34
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Starting Consul"
-msgstr "領事を開始する"
+msgstr "Consulの起動"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:37
-#, fuzzy
 msgid "There are various ways to start Consul that vary in complexity, but for the purposes of this guide, we elect to start a single Consul server with no persistence via Docker, like so:"
 msgstr "Consul を起動する方法は複雑さによって様々ですが、このガイドの目的のために、Docker を介して永続性のない単一の Consul サーバーを起動することを選択します。"
 
@@ -106,9 +102,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:44
-#, fuzzy
 msgid "Please consult the https://www.consul.io/docs/install[documentation] to learn more about the various Consul installation options."
-msgstr "様々なConsulのインストールオプションについては、 link:https://www.consul.io/docs/install[ドキュメントを] 参照してください。"
+msgstr "様々なConsulのインストールオプションについては、 link:https://www.consul.io/docs/install[ドキュメント] を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:45
@@ -136,13 +131,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:61
-#, fuzzy
 msgid "This command generates a Maven project with a REST endpoint and imports the `consul-config` extension."
 msgstr "このコマンドは、RESTエンドポイントを持つMavenプロジェクトを生成し、 `consul-config` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:64
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `consul-config` extension to your project by running the following command in your project base directory:"
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `consul-config` エクステンションを追加することができます。"
 
@@ -169,15 +162,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:80
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "GreetingController"
-msgstr "グリーティングコントローラ"
+msgstr "GreetingController"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:84
-#, fuzzy
 msgid "The Quarkus Maven plugin automatically generated a `GreetingResource` JAX-RS resource in the `src/main/java/org/acme/consul/config/client/GreetingResource.java` file that looks like:"
-msgstr "Quarkus Mavenプラグインは、 `src/main/java/org/acme/consul/config/client/GreetingResource.java` ファイル内の `GreetingResource` JAX-RSリソースを自動的に生成して、次のように表示します。"
+msgstr "Quarkus Mavenプラグインは、 `src/main/java/org/acme/consul/config/client/GreetingResource.java` ファイル内に `GreetingResource` JAX-RSリソースを次のように自動的に生成します。"
 
 #. type: delimited block -
 #: upstream/_guides/consul-config.adoc:88
@@ -230,7 +222,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:106
-#, fuzzy
 msgid "As we want to use configuration properties obtained from the Config Server, we will update the `GreetingResource` to inject the `message` property. The updated code will look like this:"
 msgstr "Config Serverから取得した設定プロパティーを使用したいので、 `GreetingResource` を更新して `message` プロパティーを注入します。更新したコードは以下のようになります。"
 
@@ -262,13 +253,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:132
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configuring the application"
 msgstr "アプリケーションの設定"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:135
-#, fuzzy
 msgid "Quarkus provides various configuration knobs under the `quarkus.consul-config` root. For the purposes of this guide, our Quarkus application is going to be configured in `application.properties` as follows:"
 msgstr "Quarkusは、 `quarkus.consul-config` ルートの下に様々な設定ノブを提供しています。このガイドの目的のために、私たちのQuarkusアプリケーションは以下のように `application.properties` で設定されることになります。"
 
@@ -286,13 +276,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:146
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Add Configuration to Consul"
-msgstr "コンスルに設定を追加"
+msgstr "Consulに設定を追加"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:150
-#, fuzzy
 msgid "For the previous application configuration to work, we need to add a `config/consul-test` key under Consul's Key Value store. The value of this key will essentially be a properties \"file\" containing the application configuration.  In this case we want to add the following data to the `config/consul-test` key:"
 msgstr "以前のアプリケーション設定を動作させるためには、Consulのキーバリューストアの下に `config/consul-test` キーを追加する必要があります。このキーの値は、基本的にはアプリケーションの設定を含むプロパティー「ファイル」になります。この場合、 `config/consul-test` キーに以下のデータを追加したいと思います。"
 
@@ -304,13 +293,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:158
-#, fuzzy
 msgid "When adding this configuration from the UI, Consul will automatically convert the data into the necessary base64 encoding. If you instead add the configuration via the Consul's https://www.consul.io/api/kv.html#create-update-key[REST API], make sure to first encode the previous data into base64."
-msgstr "UI からこの設定を追加すると、Consul は自動的に必要な base64 エンコーディングにデータを変換します。代わりに Consul の link:https://www.consul.io/api/kv.html#create-update-key[REST API を] 介して設定を追加する場合は、まず前のデータを base64 にエンコードするようにしてください。"
+msgstr "UI からこの設定を追加すると、Consul は自動的に必要な base64 エンコーディングにデータを変換します。代わりに Consul の link:https://www.consul.io/api/kv.html#create-update-key[REST API ] を介して設定を追加する場合は、まず前のデータを base64 にエンコードするようにしてください。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:162
-#, fuzzy
 msgid "In this use case we made the value of the key as a properties \"file\", because we used `quarkus.consul-config.properties-value-keys` in the application. The extension also provides the ability to use the raw values of keys when `quarkus.consul-config.raw-value-keys` is used. Furthermore, these two properties can be used simultaneously, while each one also supports setting multiple keys."
 msgstr "このユースケースでは、アプリケーションで `quarkus.consul-config.properties-value-keys` を使用しているため、キーの値をプロパティー「ファイル」にしました。また、このエクステンションでは、 `quarkus.consul-config.raw-value-keys` を使用した場合に、キーの生の値を使用する機能を提供しています。さらに、この2つのプロパティーは同時に使用することができ、それぞれが複数のキーの設定にも対応しています。"
 
@@ -322,27 +309,24 @@ msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:167
-#, fuzzy
 msgid "Run the application with: `./mvnw compile quarkus:dev`.  Open your browser to http://localhost:8080/greeting."
-msgstr "アプリケーションを実行するには、次の手順を実行します: `./mvnw compile quarkus:dev` .ブラウザを http://localhost:8080/greeting に開きます。"
+msgstr "アプリケーションを実行するには、次の手順を実行します: `./mvnw compile quarkus:dev` .ブラウザで http://localhost:8080/greeting を開きます。"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:169
-#, fuzzy
 msgid "The result should be: `Hello from Consul` as it is the value obtained from the Consul Key Value store."
-msgstr "結果は、Consulキーバリューストアから取得した値なので、 `Hello from Consul` となるはずです。"
+msgstr "Consulキーバリューストアから取得した値なので、結果は、 `Hello from Consul` となるはずです。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:170
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Run the application as a native executable"
 msgstr "アプリケーションをネイティブ実行ファイルとして実行する"
 
 #. type: Plain text
 #: upstream/_guides/consul-config.adoc:173
-#, fuzzy
 msgid "You can of course create a native image using the instructions of the link:building-native-image[Building a native executable guide]."
-msgstr "もちろん、 link:building-native-image[ネイティブ実行ファイルの構築ガイド] の指示を使ってネイティブイメージを作成することもできます。"
+msgstr "もちろん、 link:building-native-image[ネイティブ実行ファイルのビルドガイド] の指示を使ってネイティブイメージを作成することもできます。"
 
 #. type: Title ==
 #: upstream/_guides/consul-config.adoc:174
