--- a/l10n/po/ja_JP/_guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/config-reference.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-03-04 07:07+0900\n"
+"PO-Revision-Date: 2021-04-09 20:22+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -27,10 +27,8 @@ msgstr "Quarkus - 設定リファレンスガイド"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:20
-#, fuzzy
-#| msgid "In this reference guide we're going to describe various aspects of Quarkus configuration.  A Quarkus application and Quarkus itself (core and extensions) are both configured via the same mechanism that leverages the https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] API.  Quarkus configuration is based on https://github.com/smallrye/smallrye-config[SmallRye Config], an implementation of the MicroProfile Config specification.  All of the standard features are supported.  Moreover, there are several additional features which are made available by the SmallRye Config project as well as by Quarkus itself."
 msgid "In this reference guide we're going to describe various aspects of Quarkus configuration.  A Quarkus application and Quarkus itself (core and extensions) are both configured via the same mechanism that leverages the https://github.com/smallrye/smallrye-config[SmallRye Config] API an implementation of the https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] specification. Moreover, there are several additional features which are made available by Quarkus itself."
-msgstr "このリファレンスガイドでは、Quarkus の設定の様々な側面について説明します。Quarkus アプリケーションと Quarkus 自体 (コアとエクステンション) の両方は、link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] API を活用した同じメカニズムを介して設定されます。Quarkus の設定は、MicroProfile Config 仕様の実装である link:https://github.com/smallrye/smallrye-config[SmallRye Config] に基づいています。標準機能はすべてサポートされています。さらに、Quarkus だけでなく、SmallRye Config プロジェクトでも利用可能な追加機能がいくつかあります。"
+msgstr "このリファレンスガイドでは、Quarkus の設定の様々な側面について説明します。Quarkus アプリケーションと Quarkus 自体 (コアとエクステンション) の両方共、link:https://microprofile.io/project/eclipse/microprofile-config[MicroProfile Config] API を活用した同じメカニズムを介して設定されます。Quarkus の設定は、MicroProfile Config 仕様の実装である link:https://github.com/smallrye/smallrye-config[SmallRye Config] に基づいています。標準機能はすべてサポートされています。さらに、Quarkus だけでなく、SmallRye Config プロジェクトでも利用可能な追加機能がいくつかあります。"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:22
@@ -211,8 +209,6 @@ msgstr "依存関係の中に設定ファイルの埋め込み"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:93
-#, fuzzy
-#| msgid "You can embed a configuration file inside one of your dependencies by adding a `META-INF/microprofile.properties` configuration file to it (this is a standard functionality of MicroProfile Config)."
 msgid "You can embed a configuration file inside one of your dependencies by adding a `META-INF/microprofile-config.properties` configuration file to it (this is a standard functionality of MicroProfile Config)."
 msgstr "`META-INF/microprofile.properties` 設定ファイルを追加することで、依存関係の中に設定ファイルを埋め込むことができます (これは MicroProfile Config の標準機能です)。"
 
@@ -1690,16 +1686,13 @@ msgstr "追加のコンバーター"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:826
-#, fuzzy
-#| msgid "System properties"
 msgid "Indexed Properties"
-msgstr "システムプロパティー"
+msgstr "インデックスされたプロパティ"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:827
-#, fuzzy
 msgid "Parent Profile"
-msgstr "親のプロフィール"
+msgstr "親プロファイル"
 
 #. type: Plain text
 #: upstream/_guides/config-reference.adoc:828
