--- a/l10n/po/ja_JP/_guides/status-include.adoc.po
+++ b/l10n/po/ja_JP/_guides/status-include.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-04 02:20+0000\n"
-"PO-Revision-Date: 2021-03-04 10:46+0900\n"
+"PO-Revision-Date: 2021-04-11 21:07+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -39,4 +39,4 @@ msgstr "_stable_ では、下位互換性があること、エコシステムの
 #. type: delimited block =
 #: upstream/_guides/status-include.adoc:20
 msgid "For a full list of possible extension statuses, check our https://quarkus.io/faq/#extension-status[FAQ entry]."
-msgstr "とりうるエクステンションステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目を] 参照してください。"
+msgstr "とりうるエクステンションステータスの完全なリストについては、 link:https://quarkus.io/faq/#extension-status[FAQの項目] を参照してください。"
