Add some translations

--- a/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-getting-started.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: 2021-03-21 16:42+0900\n"
+"PO-Revision-Date: 2021-04-09 21:37+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -58,10 +58,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/grpc-getting-started.adoc:31
-#, fuzzy
-#| msgid "Make sure you have `generate-code` goal of `quarkus-maven-plugin` enabled in your `pom.xml`.  If you wish to generate code from different `proto` files for tests, also add the `generate-code-tests` goal:"
 msgid "Make sure you have `generate-code` goal of `quarkus-maven-plugin` enabled in your `pom.xml`.  If you wish to generate code from different `proto` files for tests, also add the `generate-code-tests` goal.  Please note that no additional task/goal is required for the Gradle plugin."
-msgstr "`pom.xml` で `generate-code` ゴールの `quarkus-maven-plugin` が有効になっていることを確認してください。テスト用に異なる `proto` ファイルからコードを生成したい場合は、 `generate-code-tests` ゴールも追加してください。"
+msgstr "`pom.xml` で `generate-code` ゴールの `quarkus-maven-plugin` が有効になっていることを確認してください。テスト用に異なる `proto` ファイルからコードを生成したい場合は、 `generate-code-tests` ゴールも追加してください。Gradleプラグインに追加のタスク/ ゴールは必要ないことに注意してください。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-getting-started.adoc:53
@@ -95,7 +93,6 @@ msgstr "この設定では、サービスとメッセージの定義を `src/mai
 
 #. type: Plain text
 #: upstream/_guides/grpc-getting-started.adoc:61
-#, fuzzy
 msgid "`quarkus-maven-plugin` retrieves a version of `protoc` (the protobuf compiler) from Maven repositories. The retrieved version matches your operating system and CPU architecture.  If this retrieved version does not work in your context, you can download the suitable binary and specify the location via `-Dquarkus.grpc.protoc-path=/path/to/protoc`."
 msgstr "`quarkus-maven-plugin` は、Maven リポジトリから `protoc` (protobuf コンパイラ)のバージョンを取得します。取得されたバージョンは、お使いのオペレーティングシステムとCPUアーキテクチャに適合します。この取得したバージョンがあなたのコンテキストで動作しない場合は、適切なバイナリをダウンロードして、 `-Dquarkus.grpc.protoc-path=/path/to/protoc` でその場所を指定できます。"
 
