--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-04-04 11:26+0900\n"
+"PO-Revision-Date: 2021-04-09 21:41+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -249,7 +249,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:106
-#, fuzzy
 msgid "Inject your entity manager and have fun"
 msgstr "エンティティーマネージャーを注入して楽しむ"
 
@@ -317,7 +316,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:140
-#, fuzzy
 msgid "To load SQL statements when Hibernate ORM starts, add an `import.sql` file to the root of your resources directory.  This script can contain any SQL DML statements.  Make sure to terminate each statement with a semicolon."
 msgstr "Hibernate ORMの起動時にSQL文をロードするには、 `import.sql` ファイルをresourcesディレクトリーのルートに追加します。このスクリプトには、任意のSQL DML文を含めることができます。各ステートメントは必ずセミコロンで終了させてください。"
 
@@ -328,15 +326,14 @@ msgstr "テストやデモ用のデータセットを用意しておくと便利
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:146
-#, fuzzy
 msgid "Make sure to wrap methods modifying your database (e.g. `entity.persist()`) within a transaction. Marking a CDI bean method `@Transactional` will do that for you and make that method a transaction boundary. We recommend doing so at your application entry point boundaries like your REST endpoint controllers."
-msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを行い、そのメソッドをトランザクションの境界にします。REST エンドポイントコントローラのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
+msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを実現出来、そのメソッドをトランザクションの境界に出来ます。REST エンドポイントコントローラーのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm.adoc:148
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Hibernate ORM configuration properties"
-msgstr "Hibernate ORMの構成プロパティー"
+msgstr "Hibernate ORMの設定プロパティー"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:151
@@ -384,9 +381,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:180
-#, fuzzy
 msgid "This will start a non-durable empty database: ideal for a quick experiment!"
-msgstr "これは、耐久性のない空のデータベースを起動します。"
+msgstr "これは、永続化されない空のデータベースを起動します。簡単な実験に最適です!"
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm.adoc:183
@@ -402,7 +398,6 @@ msgstr "複数の永続化ユニットの設定"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-orm.adoc:188
-#, fuzzy
 msgid "It is possible to define multiple persistence units using the Quarkus configuration properties."
 msgstr "Quarkusの設定プロパティーを使用して、複数の永続化ユニットを定義することができます。"
 
