Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/1.11/config/quarkus-all-build-items.adoc.po
@@ -2238,7 +2238,7 @@ msgstr ""
 #: upstream/_generated-config/1.11/config/quarkus-all-build-items.adoc:676
 #, no-wrap
 msgid "gRPC"
-msgstr ""
+msgstr "gRPC"
 
 #. type: Table
 #: upstream/_generated-config/1.11/config/quarkus-all-build-items.adoc:681
