--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
@@ -2385,7 +2385,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:724
 #, no-wrap
 msgid "gRPC"
-msgstr ""
+msgstr "gRPC"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:729
