--- a/l10n/po/ja_JP/_versions/1.11/guides/building-substrate-howto.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/building-substrate-howto.adoc.po
@@ -107,7 +107,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:51
 msgid "You can now check-out and build Substrate:"
-msgstr ""
+msgstr "これでSubstrateのチェックアウトとビルドができるようになりました。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:57
@@ -121,7 +121,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:60
 msgid "Once built, you can quickly run the tools in place"
-msgstr ""
+msgstr "一度構築したら、その場でツールを素早く実行することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:67
@@ -137,17 +137,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:69
 #, no-wrap
 msgid "Building a custom GraalVM distribution"
-msgstr ""
+msgstr "カスタムGraalVMディストリビューションの構築"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:74
 msgid "In order to create a custom GraalVM distribution (necessary for usage in quarkus) you must switch to the vm subdirectory, and use special build options to pick the modules in your distribution."
-msgstr ""
+msgstr "カスタムGraalVMディストリビューションを作成するためには、(quarkusで使用するために必要な)vmサブディレクトリーに切り替えて、特別なビルドオプションを使用して、ディストリビューションのモジュールを選択する必要があります。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:77
 msgid "For a simple subset VM with just substrate and its native tools execute the following:"
-msgstr ""
+msgstr "substrate とそのネイティブツールだけのシンプルなサブセット VM の場合は、以下を実行します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:83
@@ -161,7 +161,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:86
 msgid "For a stock CE build the following will do:"
-msgstr ""
+msgstr "純正CEビルドの場合は以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/building-substrate-howto.adoc:91
