--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
@@ -244,7 +244,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:106
 msgid "Inject your entity manager and have fun"
-msgstr ""
+msgstr "エンティティーマネージャーを注入して楽しむ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:107
@@ -310,7 +310,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:140
 msgid "To load SQL statements when Hibernate ORM starts, add an `import.sql` file to the root of your resources directory.  This script can contain any SQL DML statements.  Make sure to terminate each statement with a semicolon."
-msgstr ""
+msgstr "Hibernate ORMの起動時にSQL文をロードするには、 `import.sql` ファイルをresourcesディレクトリーのルートに追加します。このスクリプトには、任意のSQL DML文を含めることができます。各ステートメントは必ずセミコロンで終了させてください。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:142
@@ -320,7 +320,7 @@ msgstr "テストやデモ用のデータセットを用意しておくと便利
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:146
 msgid "Make sure to wrap methods modifying your database (e.g. `entity.persist()`) within a transaction. Marking a CDI bean method `@Transactional` will do that for you and make that method a transaction boundary. We recommend doing so at your application entry point boundaries like your REST endpoint controllers."
-msgstr ""
+msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを実現出来、そのメソッドをトランザクションの境界に出来ます。REST エンドポイントコントローラーのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:148
@@ -370,7 +370,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:180
 msgid "This will start a non-durable empty database: ideal for a quick experiment!"
-msgstr ""
+msgstr "これは、永続化されない空のデータベースを起動します。簡単な実験に最適です!"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:183
@@ -387,7 +387,7 @@ msgstr "複数の永続化ユニットの設定"
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:188
 msgid "It is possible to define multiple persistence units using the Quarkus configuration properties."
-msgstr ""
+msgstr "Quarkusの設定プロパティーを使用して、複数の永続化ユニットを定義することができます。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:191
