--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -727,7 +727,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:389
 #, no-wrap
 msgid "Introduction"
-msgstr ""
+msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:392
