--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache.adoc.po
@@ -1130,7 +1130,7 @@ msgstr "トランザクション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:626
 msgid "Make sure to wrap methods modifying your database (e.g. `entity.persist()`) within a transaction. Marking a CDI bean method `@Transactional` will do that for you and make that method a transaction boundary. We recommend doing so at your application entry point boundaries like your REST endpoint controllers."
-msgstr ""
+msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを実現出来、そのメソッドをトランザクションの境界に出来ます。REST エンドポイントコントローラーのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:632
