--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
@@ -235,7 +235,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:106
 msgid "Inject your entity manager and have fun"
-msgstr ""
+msgstr "エンティティーマネージャーを注入して楽しむ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:107
@@ -304,7 +304,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:142
 msgid "Make sure to wrap methods modifying your database (e.g. `entity.persist()`) within a transaction. Marking a CDI bean method `@Transactional` will do that for you and make that method a transaction boundary. We recommend doing so at your application entry point boundaries like your REST endpoint controllers."
-msgstr ""
+msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを実現出来、そのメソッドをトランザクションの境界に出来ます。REST エンドポイントコントローラーのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:144
@@ -355,7 +355,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:177
 msgid "This will start a non-durable empty database: ideal for a quick experiment!"
-msgstr ""
+msgstr "これは、永続化されない空のデータベースを起動します。簡単な実験に最適です!"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:179
