--- a/l10n/po/ja_JP/_versions/1.7/guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/spring-cloud-config-client.adoc.po
@@ -70,7 +70,7 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:28
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step."
-msgstr ""
+msgstr "次項の説明に従って、一歩一歩アプリを作成していくことをお勧めします。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:29
@@ -142,7 +142,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:69
 #, no-wrap
 msgid "GreetingController"
-msgstr ""
+msgstr "GreetingController"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:73
@@ -201,7 +201,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:95
 msgid "As we want to use configuration properties obtained from the Config Server, we will update the `GreetingResource` to inject the `message` property. The updated code will look like this:"
-msgstr ""
+msgstr "Config Serverから取得した設定プロパティーを使用したいので、 `GreetingResource` を更新して `message` プロパティーを注入します。更新したコードは以下のようになります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:106
@@ -272,12 +272,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:142
 #, no-wrap
 msgid "Run the application as a native executable"
-msgstr ""
+msgstr "アプリケーションをネイティブ実行ファイルとして実行する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:145
 msgid "You can of course create a native image using the instructions of the link:building-native-image[Building a native executable guide]."
-msgstr ""
+msgstr "もちろん、 link:building-native-image[ネイティブ実行ファイルのビルドガイド] の指示を使ってネイティブイメージを作成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/spring-cloud-config-client.adoc:146
