--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-boot-properties.adoc.po
@@ -141,7 +141,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-boot-properties.adoc:69
 #, no-wrap
 msgid "GreetingController"
-msgstr ""
+msgstr "GreetingController"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-boot-properties.adoc:73
