--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-security.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-security.adoc.po
@@ -164,7 +164,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-security.adoc:82
 #, no-wrap
 msgid "GreetingController"
-msgstr ""
+msgstr "GreetingController"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-security.adoc:86
@@ -419,12 +419,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-security.adoc:240
 #, no-wrap
 msgid "Run the application as a native executable"
-msgstr ""
+msgstr "アプリケーションをネイティブ実行ファイルとして実行する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-security.adoc:243
 msgid "You can of course create a native image using the instructions of the link:building-native-image[Building a native executable guide]."
-msgstr ""
+msgstr "もちろん、 link:building-native-image[ネイティブ実行ファイルのビルドガイド] の指示を使ってネイティブイメージを作成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/spring-security.adoc:245
