--- a/l10n/po/ja_JP/_versions/1.11/guides/spring-web.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/spring-web.adoc.po
@@ -146,7 +146,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-web.adoc:71
 #, no-wrap
 msgid "GreetingController"
-msgstr ""
+msgstr "GreetingController"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-web.adoc:75
@@ -270,12 +270,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/spring-web.adoc:131
 #, no-wrap
 msgid "Run the application as a native executable"
-msgstr ""
+msgstr "アプリケーションをネイティブ実行ファイルとして実行する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/spring-web.adoc:134
 msgid "You can of course create a native image using the instructions of the link:building-native-image[Building a native executable guide]."
-msgstr ""
+msgstr "もちろん、 link:building-native-image[ネイティブ実行ファイルのビルドガイド] の指示を使ってネイティブイメージを作成することもできます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/spring-web.adoc:135
