Add some translations

--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-07 19:11+0000\n"
-"PO-Revision-Date: 2021-04-03 11:02+0900\n"
+"PO-Revision-Date: 2021-04-11 17:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -886,13 +886,11 @@ msgstr "Quarkus `web-app` アプリケーションに発行されたアクセス
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:403
-#, fuzzy
 msgid "Injection of the `JsonWebToken` and `AccessTokenCredential` is supported in both `@RequestScoped` and `@ApplicationScoped` contexts."
 msgstr "`JsonWebToken` と `AccessTokenCredential` のインジェクションは、 `@RequestScoped` と `@ApplicationScoped` の両方のコンテキストでサポートされています。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:405
-#, fuzzy
 msgid "RefreshToken is only used to refresh the current ID and access tokens as part of its link:#session_management[session management] process."
 msgstr "RefreshTokenは、その link:#session_management[セッション管理] プロセスの一部として、現在のIDとアクセストークンをリフレッシュするためにのみ使用されます。"
 
@@ -928,9 +926,9 @@ msgstr "発見された link:https://openid.net/specs/openid-connect-discovery-1
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:418
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Token Claims And SecurityIdentity Roles"
-msgstr "トークンクレームとセキュリティーアイデンティティの役割"
+msgstr "トークンクレームと SecurityIdentity のロール"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:421
@@ -970,9 +968,8 @@ msgstr "セッション管理"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:434
-#, fuzzy
 msgid "If you have a link:security-openid-connect#single-page-applications[Single Page Application for Service Applications] where your OpenId Connect Provider script such as `keycloak.js` is managing an authoriization code flow then that script will also control the SPA authentication session lifespan."
-msgstr "`keycloak.js` などの OpenId Connect Provider スクリプトが認証コードフローを管理している link:security-openid-connect#single-page-applications[サービスアプリケーション用のシングルページアプリケーション] の場合、そのスクリプトは SPA 認証セッションの寿命も制御します。"
+msgstr "`keycloak.js` などの OpenId Connect Provider スクリプトが認可コードフローを管理している link:security-openid-connect#single-page-applications[サービスアプリケーション用のシングルページアプリケーション] の場合、そのスクリプトは SPA 認証セッションの寿命も制御します。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:436
@@ -1024,9 +1021,9 @@ msgstr "このユーザー・セッションを永遠に延長することはで
 
 #. type: Title ===
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:451
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "TokenStateManager"
-msgstr "トークンステートマネージャー"
+msgstr "TokenStateManager"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:454
@@ -1054,9 +1051,9 @@ msgstr "トークンがセッションクッキーに関連付けられる方法
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:462
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Listening to important authentication events"
-msgstr "重要な認証イベントを聞く"
+msgstr "重要な認証イベントのリッスン"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:465
