--- a/l10n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-amazon-lambda-http.adoc.po
@@ -3,55 +3,51 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 14:04+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-11 18:44+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Funqy HTTP Binding with Amazon Lambda "
-msgstr "Quarkus - Amazon Lambdaを使ったFunqy HTTPバインディング"
+msgstr "Quarkus - Amazon Lambda用Funqy HTTPバインディング"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:14
-#, fuzzy
 msgid "If you want to allow HTTP clients to invoke on your Funqy functions on AWS Lambda, Quarkus allows you to expose multiple Funqy functions through HTTP deployed as one AWS Lambda.  This approach does add overhead over the regular Funqy AWS Lambda integration and also requires you to use AWS API Gateway."
 msgstr "HTTPクライアントがAWS Lambda上のFunqy関数を呼び出すことを許可したい場合、Quarkusでは、1つのAWS LambdaとしてデプロイされたHTTPを通して複数のFunqy関数を公開することができます。この方法では、通常のFunqy AWS Lambdaの統合よりもオーバーヘッドが追加され、AWS API Gatewayを使用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:19
-#, fuzzy
 msgid "Follow the link:amazon-lambda-http[Amazon Lambda Http Guide].  It walks through using a variety of HTTP frameworks on Amazon Lambda, including Funqy."
-msgstr "link:amazon-lambda-http[Amazon Lambda Http Guide] に従ってください。それは、Funqyを含むAmazon Lambda上で様々なHTTPフレームワークを使用する方法を説明します。"
+msgstr "link:amazon-lambda-http[Amazon Lambda Http Guide] に従ってください。ガイドでは、Funqyを含むAmazon Lambda上で様々なHTTPフレームワークを使用する方法が説明されています。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:25
-#, fuzzy
 msgid "The Funqy HTTP + AWS Lambda binding is not a replacement for REST over HTTP.  Because Funqy needs to be portable across a lot of different protocols and function providers its HTTP binding is very minimalistic and you will lose REST features like linking and the ability to leverage HTTP features like cache-control and conditional GETs.  You may want to consider using Quarkus's JAX-RS, Spring MVC, or Vert.x Web Reactive Route link:amazon-lambda-http[support] instead.  They also work with Quarkus and AWS Lambda."
-msgstr "Funqy HTTP + AWS LambdaバインディングはHTTP上のRESTを置き換えるものではありません。Funqyは多くの異なるプロトコルや関数プロバイダに移植する必要があるため、HTTPバインディングは非常にミニマムで、リンクのようなRESTの機能やキャッシュコントロールや条件付きGETのようなHTTPの機能を利用する機能を失うことになります。代わりに、QuarkusのJAX-RS、Spring MVC、またはVert.x Web Reactive Routeの link:amazon-lambda-http[サポートを] 使用することを検討するとよいでしょう。また、QuarkusやAWS Lambdaとも連携しています。"
+msgstr "Funqy HTTP + AWS LambdaバインディングはHTTP上のRESTを置き換えるものではありません。Funqyは多くの異なるプロトコルや関数プロバイダに移植する必要があるため、HTTPバインディングは非常にミニマムで、リンクのようなRESTの機能やキャッシュコントロールや条件付きGETのようなHTTPの機能を利用する機能を失うことになります。代わりに、QuarkusのJAX-RS、Spring MVC、またはVert.x Web Reactive Routeの link:amazon-lambda-http[サポート] を使用することを検討するとよいでしょう。また、QuarkusやAWS Lambdaとも連携しています。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:26
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "An additional Quickstart"
 msgstr "追加のクイックスタート"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:30
-#, fuzzy
 msgid "Beyond generating an AWS project that is covered in the link:amazon-lambda-http[Amazon Lambda Http Guide], there's also a quickstart for running Funqy HTTP on AWS Lambda."
 msgstr "link:amazon-lambda-http[Amazon Lambda Http Guide] でカバーされているAWSプロジェクトを生成する以外にも、AWS Lambda上でFunqy HTTPを実行するためのクイックスタートもあります。"
 
@@ -62,19 +58,17 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:34
-#, fuzzy
 msgid "The solution is located in the `funqy-amazon-lambda-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-amazon-lambda-http-quickstart[directory]."
 msgstr "ソリューションは `funqy-amazon-lambda-quickstart` {quickstarts-tree-url}/funqy-quickstarts/funqy-amazon-lambda-http-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The Code"
 msgstr "コード"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:39
-#, fuzzy
 msgid "There is nothing special about the code and more importantly nothing AWS specific.  Funqy functions can be deployed to many different environments and AWS Lambda is one of them.  The Java code is actually the same exact code as the {quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[funqy-http-quickstart]."
 msgstr "コードには何も特別なものはありませんし、もっと重要なのはAWSに特化したものは何もありません。Funqy関数は様々な環境にデプロイすることができ、AWS Lambdaもその一つです。Javaのコードは、実は{quickstarts-tree-url}/funqy-quickstarts/funqy-http-quickstart[funqy-http-quickstart]と全く同じコードです。"
 
@@ -86,7 +80,6 @@ msgstr "はじめに"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda-http.adoc:44
-#, fuzzy
 msgid "The steps to get this quickstart running are exactly the same as defined in the link:amazon-lambda-http[Amazon Lambda HTTP Guide].  This differences are that you are running from a quickstart and the maven dependencies are slightly different."
 msgstr "このクイックスタートを実行するための手順は、 link:amazon-lambda-http[Amazon Lambda HTTP Guide] で定義されているものと全く同じです。この違いは、クイックスタートから実行していることと、mavenの依存関係が若干異なることです。"
 
