Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/funqy-gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/funqy-gcp-functions-http.adoc.po
@@ -44,7 +44,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/funqy-gcp-functions-http.adoc:26
 #, no-wrap
 msgid "An additional Quickstart"
-msgstr ""
+msgstr "追加のクイックスタート"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/funqy-gcp-functions-http.adoc:30
