--- a/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/gcp-functions.adoc.po
@@ -187,7 +187,7 @@ msgstr "このプロジェクトの例では、 `HttpFunction` 、 `BackgroundFu
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:82
 #, no-wrap
 msgid "Choose Your Function"
-msgstr ""
+msgstr "functionの選択"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/gcp-functions.adoc:87
