Add some translations

--- a/l10n/po/ja_JP/_guides/topic/standards.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/standards.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-30 15:04+0000\n"
-"PO-Revision-Date: 2021-03-06 23:54+0900\n"
+"PO-Revision-Date: 2021-04-11 20:46+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -42,46 +42,38 @@ msgstr "{project-name} - 標準に対するスタンス"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:16
-#, fuzzy
 msgid "Let's go to the quark of things.  We don't want you to spend hours learning new technologies.  Instead, {project-name} provides leading frameworks and technologies from open source projects, such as https://vertx.io[Vert.x], https://camel.apache.org[Camel], http://hibernate.org[Hibernate] and https://resteasy.github.io[RESTEasy]. You can also find innovative community projects, such as https://smallrye.io[SmallRye]. If you are looking for standards you can find https://microprofile.io[MicroProfile] and selected specifications from https://jakarta.ee[Jakarta EE]."
-msgstr "物事の核心に迫ろう。私たちは、新しい技術の習得に何時間も費やしてほしくありません。その代わり、{project-name}では、 link:https://vertx.io[Vert.x]、 link:https://camel.apache.org[Camel]、 link:http://hibernate.org[Hibernate]、 link:https://resteasy.github.io[RESTEasy]などのオープンソースプロジェクトの主要なフレームワークや技術を提供しています。また、 link:https://smallrye.io[SmallRye]のような革新的なコミュニティプロジェクトもあります。標準規格を探している場合は、 link:https://jakarta.ee[Jakarta EE]の link:https://microprofile.io[MicroProfile]と選択された仕様を見つけることができます。"
+msgstr "物事の核心に迫りましょう。私たちは、新しい技術の習得に何時間も費やしてほしくありません。その代わり、{project-name} では、 link:https://vertx.io[Vert.x]、 link:https://camel.apache.org[Camel]、 link:http://hibernate.org[Hibernate]、 link:https://resteasy.github.io[RESTEasy]などのオープンソースプロジェクトの主要なフレームワークや技術を提供しています。また、 link:https://smallrye.io[SmallRye]のような革新的なコミュニティプロジェクトもあります。標準規格を探している場合は、 link:https://jakarta.ee[Jakarta EE]の link:https://microprofile.io[MicroProfile] や選りすぐりの仕様を見つけることができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:18
-#, fuzzy
 msgid "Our dependency injection solution is based on CDI with Arc."
-msgstr "当社の依存性注入ソリューションは、CDIにArcを加えたものです。"
+msgstr "我々の依存性注入ソリューションは、ArcによるCDIに基づいています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:20
-#, fuzzy
 msgid "You can use JAX-RS annotations to define the REST endpoints with https://resteasy.github.io[RESTEasy]."
 msgstr "link:https://resteasy.github.io[RESTEasy]では、JAX-RSアノテーションを使ってRESTエンドポイントを定義することができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:23
-#, fuzzy
 msgid "You can use JPA annotations to map your persistent entities and JTA annotations to declare the transaction boundaries with http://hibernate.org[Hibernate]"
-msgstr "JPAアノテーションを使って永続的なエンティティをマッピングし、JTAアノテーションを使って link:http://hibernate.org[Hibernate]とのトランザクション境界を宣言することができます。"
+msgstr "JPAアノテーションを使って永続的なエンティティをマッピングし、JTAアノテーションを使って link:http://hibernate.org[Hibernate]でトランザクション境界を宣言することができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:25
-#, fuzzy
 msgid "You can use https://smallrye.io[SmallRye] to configure, secure, document and monitor your application."
-msgstr "link:https://smallrye.io[SmallRye]を使用して、アプリケーションの設定、セキュリティ、文書化、監視を行うことができます。"
+msgstr "link:https://smallrye.io[SmallRye]を使用して、アプリケーションの設定、セキュア化、文書化、監視を行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:27
-#, fuzzy
 msgid "You can use https://vertx.io[Vert.x] or https://camel.apache.org[Camel], and we support much more."
 msgstr "link:https://vertx.io[Vert.x]や link:https://camel.apache.org[Camel]を使用することができ、さらに多くのものをサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/topic/standards.adoc:29
-#, fuzzy
-#| msgid "Since we're not limited to standards we can go beyond and extend your possibilities.  Of course, {project-name} is not a passive consumer.  Our goal is to improve and innovate the technologies we use and contribute back to the open source projects and standards we rely on."
 msgid "Of course, {project-name} is not a passive consumer. Our goal is to improve and innovate the technologies we use and contribute back to the open source projects and standards we rely on."
-msgstr "我々は標準に限定されない為、あなたの可能性を広げることが可能です。 もちろん、{project-name} は受動的な消費者ではありません。 私たちのゴールは、使用する技術を改善、革新し、私たちが頼りにしているオープンソースプロジェクトと標準に貢献することです。"
+msgstr "勿論、我々は標準に限定されない為、あなたの可能性を広げることが可能です。 もちろん、{project-name} は受動的な消費者ではありません。 私たちのゴールは、使用する技術を改善、革新し、私たちが頼りにしているオープンソースプロジェクトと標準に貢献することです。"
 
 #, fuzzy
 #~ msgid "Let's go to the quark of things.  We don't want you to spend hours learning new technologies.  Instead, the {project-name} programming model builds on top of proven standards.  Be it official standards such as Eclipse MicroProfile or leading frameworks in a specific domain such as Eclipse Vert.x."
