Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vault.adoc.po
@@ -868,7 +868,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:458
 msgid "For instance:"
-msgstr ""
+msgstr "例えば"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/vault.adoc:463
