--- a/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/vault.adoc.po
@@ -863,7 +863,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/vault.adoc:457
 msgid "For instance:"
-msgstr ""
+msgstr "例えば"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/vault.adoc:462
